# dataurl

./: Cargo.toml  Dockerfile  Makefile  README.md  data.sh
.github/workflows/: cd.yml  ci.yml
src/: files.rs  lib.rs  main.rs
tests/: mod.rs
tests/cli/: basic.rs  decode.rs  encode.rs  files.rs  mod.rs
tests/lib/: _misc_.rs  charset.rs  charset_no_default.rs  fragment.rs  media_type.rs  media_type_no_default.rs  mod.rs  new.rs  parse.rs  text.rs  to_string.rs
