[package]
name = "dataurl"
version = "0.1.2"
authors = [
    "Sunshine <sunshine@uberspace.net>",
]
edition = "2018"
description = "CLI tool and Rust crate for parsing and generating data URLs"
homepage = "https://github.com/Y2Z/dataurl"
repository = "https://github.com/Y2Z/dataurl"
readme = "README.md"
keywords = ["web", "command-line"]
categories = ["command-line-utilities", "encoding", "parsing", "web-programming"]
include = [
    "src/*.rs",
    "Cargo.toml",
]
license = "CC0-1.0"

[dependencies]
atty = "0.2.14"
base64 = "0.22.1"
clap = { version = "2.33.3", optional = true } 
encoding_rs = "0.8.35"
percent-encoding = "2.3.1"
url = "2.5.4"

[dev-dependencies]
assert_cmd = "2.0.16"

[features]
default = ["cli"]
cli = ["clap"]

[[bin]]
name = "dataurl"
required-features = ["cli"]
